# InboxGuardian

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  _path_setup.py  llm_cache.json  main.py  pyproject.toml  requirements.txt  results-demo.json  run_adk_pipeline.py  run_mcp_client.py  safety_report.md  test_quota.py  threat_feed_cache.txt
.agents/skills/email_safety/: SKILL.md
agents/: __init__.py  audit_log.py  connector_agent.py  email_utils.py  llm_analysis_agent.py  ml_classifier_agent.py  scoring_agent.py
dashboard/: app.py
evaluation/: metrics_report.md  run_evaluation.py
mcp-server/: gmail_auth.py  gmail_mcp_server.py
ml/: README.md  collect_data.py  evaluate.py  feature_engineering.py
ml/data/: README.md
ml/data/processed/: labeled_emails.csv
ml/eval/: model_eval_report.md
ml/models/: X_features.npz  baseline_lr.joblib  body_texts.joblib  idx_test.npy  idx_train.npy  is_synthetic.npy  tfidf_vectorizer.joblib  training_results.joblib  y_labels.npy
mock-data/: README.md  real-phishing-samples.json  sample-emails.json
skills/: phishing-heuristics.md  scoring-rubric.md
tests/: test_ensemble.py
utils/: cache_utils.py
